--- a/src/Components/Projects/ProjectGallery/ProjectGallery.css
+++ b/src/Components/Projects/ProjectGallery/ProjectGallery.css
@@ -43,7 +43,7 @@
 	margin-top: calc(var(--top-margin) * -2);
 	margin-bottom: auto;
 	display: grid;
-	grid-template-columns: repeat(3, minmax(3rem, 1fr));
+	grid-template-columns: repeat(2, minmax(3rem, 1fr));
 	grid-gap: 15px;
 	justify-content: center;
 	align-items: center;
@@ -52,6 +52,7 @@
 .ProjectGallery .projectHolder .project {
 	position: relative;
 	height: 100;
+	justify-self: center;
 }
 
 .ProjectGallery .projectHolder .projectImg{
