--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -111,6 +111,8 @@
 
 .Project .rightSide .second .details p > *{
 	text-decoration: none;
+	font-size: 12px;
+	font-weight: 500;
 }
 
 .Project .bottomPart .bottomHolder {
