--- a/src/Components/ProjectDetails/ProjectDetails.css
+++ b/src/Components/ProjectDetails/ProjectDetails.css
@@ -71,7 +71,13 @@
 .ProjectDetails .middlePart .detailsHolder h3{
 	color: #e32f4e;
 	text-transform: uppercase;
+	font-size: 25px;
 }
+
+.ProjectDetails .middlePart .detailsHolder p{
+	font-size: 16px;
+}
+
 
 .ProjectDetails .middlePart .scroll {
 	width: 100%;
@@ -130,5 +136,16 @@
 	color: white;
 	font-weight: 500;
 }
+
+
+.ProjectDetails .bottomPart .bottomHolder .bottom a{
+	text-decoration: none;
+	color: white;
+	cursor: pointer;
+}
+
+
+
+
 
 
