--- a/src/Components/Expert/ExpertInfo/ExpertInfo.css
+++ b/src/Components/Expert/ExpertInfo/ExpertInfo.css
@@ -5,7 +5,7 @@
   	background-image: var(--primary);
   	height: 100%;
   	
-  	margin-top: 8rem;
+  	margin-top: 5rem;
 
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -22,29 +22,29 @@
 }
 
 .ExpertInfo .infoHolder {
-	margin-top: -10rem;
+	/* margin-top: -10rem; */
 	grid-area: infoHolder;
 	display: flex;
 	justify-content: center;
 }
 
-
 .ExpertInfo .infoHolder .skills {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: var(--margin);
-	grid-row-gap: 2rem;
+	grid-row-gap: 1rem;
+	margin-top: -6rem;
 }
 
 .ExpertInfo .infoHolder .skills .skill h3 {
-	margin-top: 5px;
+	margin-top: 0px;
 	margin-bottom: 2px;
 }
 
 .ExpertInfo .infoHolder .skills .skill {
 	background-color: #222330; 
-	padding: 1rem;
-	border-radius: 8px;
+	padding: 0.5rem;
+	border-radius: 8px
 }
 
 .ExpertInfo .infoHolder .skills #node{
@@ -57,6 +57,10 @@
 
 .ExpertInfo .infoHolder .skills .skill img{
 	width: 1.5rem;
+}
+
+.ExpertInfo .infoHolder .skills .skill p {
+	margin: 0px 0px;
 }
 
 .ExpertInfo .infoHolder .skills .skill img:last-of-type{
@@ -77,7 +81,6 @@
 		margin-left: var(--margin);
 		margin-right: var(--margin);
 		grid-template-rows: 5rem  1fr;
-
 	}
 
 	.ExpertInfo .titleHolder {
@@ -89,10 +92,36 @@
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
- 		margin-top: -10rem;
+ 		/* margin-top: -10rem; */
 	}
 
 	.ExpertInfo .infoHolder .graphHolder .graph .smallPara{
 		text-align: center;
 	}
+
+	.ExpertInfo .infoHolder .skills {
+		grid-column-gap: 2%;
+		grid-row-gap: 2%;
+		margin-top: -5rem;
+	}
+	
+	.ExpertInfo .infoHolder .skills .skill h3 {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+
+	.ExpertInfo .infoHolder .skills .skill {
+		background-color: #222330; 
+		padding: 0.5rem;
+		border-radius: 8px;
+	}
+
+	.ExpertInfo .infoHolder .skills .skill p {
+		margin: 0px 0px;
+	}
+
+	.ExpertInfo .titleHolder p {
+		display: none;
+	}
+	
 }
