--- a/src/Components/Shared/NavBar/NavBar.css
+++ b/src/Components/Shared/NavBar/NavBar.css
@@ -105,7 +105,6 @@
 	margin-right: 5px;
 }
 
-
 @media only screen and (max-width: 768px) {
 	.NavBarHolder .avatarHolder {
 		position: absolute;
@@ -114,3 +113,13 @@
 		top: 45vh;
 	}
 }
+
+@media only screen and (max-width: 560px) {
+	.NavBarHolder .avatarHolder {
+		position: absolute;
+		z-index: 99;
+		right: 0%;
+		top: 55vh;
+	}
+}
+
